--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
 nav {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  background-color: #004d99;
+  padding: 1rem;
+  text-align: center;
+}
+
+nav {
   background-color: #004d99;
   padding: 1rem;
   text-align: center;
