--- a/style.css
+++ b/style.css
@@ -125,6 +125,18 @@ section h2 {
   border-radius: 6px;
 }
 
+section, .project-card {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
 .project-card h3 {
   margin-bottom: 0.5rem;
   font-size: 1.3rem;
